<resources>
    <string name="app_name">Lyf</string>
    <string name="capture">Capture</string>
    <string name="database">Database</string>
    <string name="map">Map</string>
    <string name="about">About</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_specific">Map</string>
    <string name="title_activity_database_plants">DatabasePlants</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="activity2">activity2</string>
    <string name="btn1">btn1</string>
    <string name="titleApp_name">Lyf</string>
    <string name="Log_In">Log In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Email">Email</string>
    <string name="Username">Username</string>

    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="AppLogoDesc">App Logo in Log In Screen</string>
    <string name="Log_InDesc">Log In Input EditText</string>
    <string name="PasswordDesc">Password Input EditText</string>

    <string name="FirstName">First Name</string>
    <string name="MiddleName">Middle Name</string>
    <string name="LastName">Last Name</string>

    <string name="RePassword">Re-enter Password</string>

    <string name="CreateAccount">Create Account</string>
    <string name="AlreadyExistingUser">Already a member? Login</string>
</resources>
