<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lyf_bg_solid"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:src="@drawable/lyfbrand"
        android:contentDescription="@string/AppLogoDesc"/>

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:fontFamily="@font/cocogoosecondensed_ultralight"
        android:hint="@string/Username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/WhiteSmoke"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:fontFamily="@font/cocogoosecondensed_ultralight"
        android:hint="@string/Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/WhiteSmoke"
        tools:targetApi="o" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cocogoosecondensed_ultralight"
            android:text="@string/RememberMe"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:checked="true"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ForgetPassword"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_lock_open_black_24dp"
            android:drawablePadding="6dp"
            android:padding="4dp"
            android:fontFamily="@font/cocogoosecondensed_ultralight"/>


    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shapelogin"
        android:fontFamily="@font/cocogoosecondensed_ultralight"
        android:padding="15dp"
        android:shadowColor="@android:color/transparent"
        android:text="@string/Log_In"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shapesignup"
        android:fontFamily="@font/cocogoosecondensed_ultralight"
        android:padding="15dp"
        android:shadowColor="@android:color/transparent"
        android:text="@string/Sign_Up"
        android:textColor="@color/white" />

</LinearLayout>